# async-yerevan-challenge

./: README.md
rer-python/: .gitignore  config.yaml  pyproject.toml
rer-python/.devcontainer/: devcontainer.json
rer-python/async_fetch/: config.py  main.py
vl174-scala/: .gitignore  Challenge.scala  README.md  build.sbt
